Update to fix mobile whitespace

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ h2 {
 }
 
 section {
-    margin-top: 200px;                 /*------------------------------    temp*/
+    margin-top: 6em;                 /*------------------------------    temp*/
 }
 
 
@@ -125,9 +125,10 @@ nav a {
 /*-----------------------------------------------------------------   Twitter feed   */
 
 #twitter {
-    display: hidden; /*----------------------------------------------------- change me!!!!!!!!!!!!!!!!!!!*/
+    display: grid;
     place-items: center;
     margin-bottom: 200px;
+    gap: 2rem;
 }
 
 .twitter-timeline {
@@ -135,7 +136,7 @@ nav a {
     height: 50rem;
     overflow-y: scroll;
     scrollbar-gutter: hidden;
-    border-radius: 5%;
+    border-radius: 25px;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -184,6 +185,7 @@ nav a {
 .project-container {
     margin-top: 40px;
     width: auto;
+    margin-bottom: 6em;
 }
 
 #crown-project {
@@ -317,19 +319,24 @@ canvas {
     }    
 
     section {
-        margin: 0 auto;
+        margin: 2em auto;
     }
 
     nav {
         position: fixed;
         top: 0;
         height: auto;
-        width: 100%;
+        width: 100vw;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
-        padding: 1em;
+        padding: .7em 0;
+        margin: 0;
+    }
+
+    nav p {
+        margin-bottom: 0;
     }
     
     
@@ -369,7 +376,6 @@ canvas {
         flex-direction: column;
         justify-content: space-evenly;
         margin: 0;
-        /*display: none;  ------------------------------------to fix mobile*/
     }
 
     .project-card {
@@ -406,6 +412,11 @@ canvas {
 
     header {
         height: auto;
+    }
+
+    .twitter-timeline {
+        width: 75vw;
+        border-radius: 15px;
     }
 
 
